2009-08-31  Helmut Eller  <heller@common-lisp.net>

	Keep note overlays in a global variable.
	That's simpler and cheaper than scanning all buffers.

	* slime.el (slime-note-overlays): New variable.
	(slime-make-note-overlay, slime-remove-old-overlays): Use it.

2009-08-27  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-remove-old-overlays): delete notes at the very beginning
	of the buffer too. Thanks to Nick Levine.

2009-08-22  Helmut Eller  <heller@common-lisp.net>

	Speed up symbol completion.

	* swank.lisp (all-completions): Don't call unparse-symbol
	while matching.  That gets very slow in CCL's CCL package.
	Just use symbol-name and compare with char-equal.
	(prefix-match-p): Use char-equal.

2009-08-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-transcript-start-hook)
	(slime-transcript-stop-hook): New hooks.
	(slime-eval-with-transcript): Use them.
	(slime-eval-with-transcript-cont): Deleted.

2009-08-19  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp: Accommodate the new Java/Lisp stack frame
	abstraction in the upcoming abcl-0.16. (based on code from Tobias
	Rittweiler).

2009-08-18  Mark Evenson  <evenson@panix.com>

	Add multithreading code for abcl-0.16. (Tobias Rittweiler)

	* swank-abcl.lisp: A multithread implementation taking advantage
	of the new synchronization primitives in abcl-0.16.

	Restore working with abcl-0.15.

	* swank-abcl.lisp: Remove the warm initialization code for
	SWANK:COMPILER-CONDITION, as it is no longer needed for the
	current release of ABCL.

2009-08-16  StanisBaw Halik <sthalik@test123.ltd.pl>

	* swank.lisp (init-global-stream-redirection): Continue even if
	streams are already redirected.  Useful for restarting Swank with
	M-x slime when a REPL is already present.  Will most likeley
	mess up the input stream in multi threaded setups, tho.

2009-08-15  Helmut Eller  <heller@common-lisp.net>

	XEmacs fixes.

	* slime.el (slime-editing-keys): Use (kbd "C-M-.") because XEmacs